fixed profile distortion

--- a/template.css
+++ b/template.css
@@ -38,7 +38,6 @@ h1 {
     font-size: 17pt;
     font-family: 'Open Sans';
     padding-bottom: 8px;
-    margin-right: 107px;
 }
 h2 {
     font-size: 20pt;
